force-app/main/default/objects/Class_Sponsor__c/Class_Sponsor__c.object-meta.xml
<CustomObject>
    <description>The sponsors of the class</description>
    <label>Class Sponsor</label>
    <nameField>
        <displayFormat>Spon-{0000}</displayFormat>
        <label>Class Sponsor No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Sponsors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>