force-app/main/default/objects/Class_Sponsor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account of the entity sponsoring the class.</description>
    <inlineHelpText
  >The account of the entity sponsoring the class.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Class Sponsorships</relationshipLabel>
    <relationshipName>Class_Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>