force-app/main/default/objects/Class_Sponsor__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The class being sponsored.</description>
    <inlineHelpText>The class being sponsored.</inlineHelpText>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Sponsors</relationshipLabel>
    <relationshipName>Class_Sponsors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>