force-app/main/default/objects/Class_Sponsor__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>The sponsor&apos;s logo</description>
    <label>Logo</label>
    <type>Url</type>
</CustomField>