force-app/main/default/objects/Class_Sponsor__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The sponsor&apos;s name</description>
    <inlineHelpText>The sponsor&apos;s name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>