force-app/main/default/objects/Class_Sponsor__c/fields/Sponsor_Logo_Link__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Logo_Link__c</fullName>
    <description
  >When supplied, the sponsor logo will be hyperlinked.</description>
    <inlineHelpText
  >When supplied, the sponsor logo will be hyperlinked.</inlineHelpText>
    <label>Sponsor Logo Link</label>
    <type>Url</type>
</CustomField>